# imap-cleanup

./: .editorconfig  .env.example  .gitignore  .markdownlint-cli2.jsonc  .releaserc  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _build-binaries.yml  _ci.yml  _codeql.yml  _semantic-release.yml  _test.yml  ci.yml  semantic-pr-title-check.yml
docs/: README.md  configuration.md  delete-folder.md  delete.md  examples.md  folders.md  terms.md
scripts/: generate_version_info.py  render_doc_examples.py  set_project_version.py  verify_release_binaries.py
src/imap_cleanup/: __init__.py  __main__.py  cli.py  imap_client.py  models.py  parsing.py  rendering.py
tests/: conftest.py  test_cli.py  test_doc_examples.py  test_imap_client.py  test_parsing.py  test_release_binary_verification.py  test_rendering.py  test_vscode_presets.py
