[project]
name = "imap-cleanup"
version = "1.7.0"
description = "IMAP mailbox reporting and cleanup CLI"
readme = "README.md"
authors = [
    { name = "Jon LaBelle" }
]
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
]

[project.scripts]
imap-cleanup = "imap_cleanup:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
